--- a/FreiRui/templates/post/list_single.html
+++ b/FreiRui/templates/post/list_single.html
@@ -5,19 +5,21 @@
 
 {% if user.is_authenticated %}
 <span style="display: flex; flex-direction: row; justify-content: space-evenly;">
+    {% if posts.pk %}
     <a href="{% url 'post_edit' pk=posts.pk %}" class="top-menu"
-        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
-            class="fas fa-edit fa-5x"></i>
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+        <i class="fas fa-edit fa-5x"></i>
         <p> Editar post </p>
     </a>
+    {% endif %}
     <a href="{% url 'post_new' %}" class="top-menu"
-        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
-            class="far fa-plus-square fa-5x"></i>
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+        <i class="far fa-plus-square fa-5x"></i>
         <p> criar postagem </p>
     </a>
     <a href="{% url 'category_new' %}" class="top-menu"
-        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
-            class="far fa-plus-square fa-5x"></i>
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+        <i class="far fa-plus-square fa-5x"></i>
         <p> Criar Categoria </p>
     </a>
 </span>
@@ -54,6 +56,12 @@
 {% endif %}
 
 <section>
+    {% if post.published_date > now %}
+    <i class="far fa-clock text-danger"></i>
+    {% endif %}
+    {% if post.is_deleted %}
+    <p class="text-danger"> Postagem deletada </p>
+    {% endif %}
     <div style="padding-bottom: 30px; padding-top: 30px;" class="d-flex justify-content-center h1-quemsomos">
         <h1>
             {{ posts.title }}
