--- a/FreiRui/static/style.css
+++ b/FreiRui/static/style.css
@@ -16,6 +16,13 @@ body {
   color: #2364ac !important;
 }
 
+.text-bg .danger {
+  background-color: rgba(
+    var(--bs-danger-rgb),
+    var(--bs-text-opacity)
+  ) !important;
+}
+
 .dropdown-item {
   transition: background-color 0.5s ease;
 }
@@ -25,6 +32,9 @@ body {
   background-color: #91b4d5;
   border: none;
   color: white !important;
+  flex-flow: nowrap;
+  display: flex;
+  flex-direction: column;
 }
 
 .dropdown-item:hover {
@@ -73,6 +83,20 @@ body {
   z-index: 999;
 }
 
+.navbar-nav {
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: wrap;
+  flex-flow: wrap;
+  justify-content: flex-start;
+  height: 90px;
+  align-content: space-around;
+}
+
 /* Footer */
 
 footer {
@@ -86,7 +110,8 @@ footer {
 
 /* Quem somos */
 
-.h1-quemsomos h1 {
+.h1-quemsomos h1,
+h2 {
   color: #2264ac;
   font-family: "Dosis", Arial, Helvetica, "Nimbus Sans L", sans-serif;
   font-size: 40px;
@@ -261,7 +286,7 @@ footer {
   margin-top: auto;
 }
 
-/* // Dispositivos extra small (telefones em modo retrato, com menos de 576px) */
+/* Dispositivos extra small (telefones em modo retrato, com menos de 576px) */
 @media (max-width: 575.98px) {
   html,
   body {
@@ -318,13 +343,17 @@ footer {
     aspect-ratio: auto 940 / 594;
     height: unset !important;
   }
+
+  .row>* {
+    padding: 0; 
+  }
 }
 
-/* // Dispositivos small (telefones em modo paisagem, com menos de 768px) */
+/* Dispositivos small (telefones em modo paisagem, com menos de 768px) */
 @media (max-width: 767.98px) {
 }
 
-/* // Dispositivos médios (tablets com menos de 992px) */
+/* Dispositivos médios (tablets com menos de 992px) */
 @media (min-width: 575.98px) and (max-width: 991.98px) {
   body {
     overflow-x: hidden;
@@ -345,6 +374,51 @@ footer {
   }
 }
 
-/* // Dispositivos large (desktops com menos de 1200px) */
+/* tablets e celulares */
+@media (max-width: 991.98px) {
+  .navbar-collapse {
+    margin: 0 20px 0 20px;
+  }
+
+  .navbar-nav {
+    flex-direction: column;
+    height: unset;
+  }
+
+  .navbar-nav .nav-item,
+  .nav-link,
+  .dropdown-item {
+    width: 100%;
+    text-align: center;
+    margin-top: 2px;
+  }
+
+  .nav-item {
+    height: 100%;
+    background-color: #91b4d5 !important;
+    display: flex;
+    place-items: center;
+    flex-direction: column;
+  }
+
+  .dropdown-menu, .dropdown-item {
+    width: 100%;
+  }
+  
+  .videos {
+    display: flex !important;
+    flex-direction: column !important;
+    grid-auto-rows: unset !important;
+    grid-template-columns: unset !important;
+    gap: unset !important;
+  }
+
+  .videos iframe {
+    width: 90vw;
+    margin-bottom: 20px;
+  }
+}
+
+/* Dispositivos large (desktops com menos de 1200px) */
 @media (max-width: 1199.98px) {
 }
