--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -16,10 +16,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
     <script>
         // window.onload = () => {
         //     const postsRaw = [...document.getElementsByClassName('post-cruncher')]
@@ -28,11 +24,17 @@
         //         rawPost.innerHTML = window.markdownit().render(rawPost.innerHTML)
         //     })
         // }
+        function goToCategory(category) {
+            this.event.preventDefault();
+            const prettifiedUrl = category.replace(/\s|%20/g, '_');
+            window.location.href = prettifiedUrl;
+        }
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legado do Frei Rui Guido Depiné</title>
+    <meta property="fb:page_id" content="271595581748248">
 </head>
 
 <body>
@@ -40,12 +42,11 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="{% static 'logo.png' %}" width="170" height="170"
-                        alt="Legado Frei Rui, contornos do Frei Rui">
+                    <img src="{% static 'logo.png' %}" width="170" height="170" alt="contornos do Frei Rui">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    aria-expanded="false" aria-label="Toggle navigation" style="margin-right: 10px;">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="drop-fonts px-2 text-bg collapse navbar-collapse" id="navbarSupportedContent">
@@ -59,8 +60,9 @@
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 {% endif %}
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle {% if category.published == False %} danger {% endif %}"
+                                    href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
                                     {{ category.name }}
                                 </a>
                                 {% if user.is_authenticated %}
@@ -75,7 +77,9 @@
                                             <i class="fas fa-edit"></i>
                                         </a>
                                         {% endif %}
-                                        <a class="dropdown-item" href="/{{ category.name | escapejs }}">
+                                        <a class="dropdown-item {% if category.published == False %} danger {% endif %}"
+                                            href="{% url 'post_list' category=category.name %}"
+                                            onclick="goToCategory(`{% url 'post_list' category=category.name %}`)">
                                             {{ category.name }}
                                         </a>
                                         {% if user.is_authenticated %}
@@ -92,7 +96,9 @@
                                             <i class="fas fa-edit"></i>
                                         </a>
                                         {% endif %}
-                                        <a class="dropdown-item" href="/{{ next_category.name | escapejs }}">
+                                        <a class="dropdown-item {% if next_category.published == False %} danger {% endif %}"
+                                            href="{% url 'post_list' category=next_category.name %}"
+                                            onclick="goToCategory(`{% url 'post_list' category=next_category.name %}`)">
                                             {{ next_category.name }}
                                         </a>
                                 </li>
@@ -110,7 +116,11 @@
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 {% endif %}
-                                <a class="nav-link" href="/{{ category.name | escapejs }}">{{ category.name }}</a>
+                                <a class="nav-link {% if category.published == False %} danger {% endif %}"
+                                    href="{% url 'post_list' category=category.name %}"
+                                    onclick="goToCategory(`{% url 'post_list' category=category.name %}`)">
+                                    {{ category.name }}
+                                </a>
                                 {% if user.is_authenticated %}
                             </span>
                             {% endif %}
@@ -139,17 +149,20 @@
                 <div class="col-md-4 d-flex justify-content-end icons-footer">
                     <a href="https://www.facebook.com/Legado-do-Frei-Rui-Depin%C3%A9-101772318808572/"
                         class="btn btn-outline">
-                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-facebook" style="color: #2264ac"></i>
                     </a>
 
                     <a href="https://www.youtube.com/channel/UCNC-pWwv7UpVAOZ9nBH7-HA" class="btn btn-outline ml-2">
-                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-youtube" style="color: #2264ac"></i>
                     </a>
                 </div>
             </div>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
