--- a/FreiRui/templates/post/edit.html
+++ b/FreiRui/templates/post/edit.html
@@ -116,9 +116,9 @@
                             const textContent = slice.content.textBetween(0, slice.content.size, '\n');
                             const openTag = `<span style="display: block; text-align: ${selectedAlignment};">`;
                             const closeTag = `</span>`;
-                            const colored = `${openTag}${textContent}${closeTag}`;
+                            const aligned = `${openTag}${textContent}${closeTag}`;
 
-                            tr.replaceSelectionWith(schema.text(colored)).setSelection(
+                            tr.replaceSelectionWith(schema.text(aligned)).setSelection(
                                 createSelection(tr, selection, pmState.TextSelection, openTag, closeTag)
                             );
 
@@ -250,14 +250,19 @@
             'Select image file': 'Selecione uma ou mais imagens',
         });
 
-        const plugins = [Editor.plugin.colorSyntax, alignTextPlugin];
+
+        const colorSyntaxOptions = {
+            preset: ['#2264ac', '#44364e'],
+        };
+
+        const plugins = [[Editor.plugin.colorSyntax, colorSyntaxOptions], alignTextPlugin];
         const editor = new Editor({
             el: document.querySelector('#editor'),
             height: '500px',
             initialEditType: 'wysiwyg',
             previewStyle: 'vertical',
             // When editing a post, set initialValue to the post content
-            initialValue: '{{ default_values.text|escapejs }}',
+            initialValue: '{{ default_values.text | escapejs }}',
             plugins,
             usageStatistics: false,
             language: 'pt-BR',
@@ -409,8 +414,6 @@
         clearTimeout(window.toastUiWatcher);
     }
 
-    /** @todo integrity */
-
     const addCss = (fileName) => {
         const { head } = document;
         const link = document.createElement('link');
@@ -460,8 +463,74 @@
     document.head.insertAdjacentHTML('beforeend', metaTag);
 
 </script>
+<style>
+    input[type=text],
+    select {
+        width: 28%;
+        padding: 10px;
+        border: 1px solid black;
+        border-radius: 4px;
+    }
 
-<form id="post_form" method="post" action="" enctype="multipart/form-data">
+    input[type=checkbox] {
+        float: right;
+        margin-left: -1.5em;
+        width: 2em;
+        margin-left: -2.5em;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+        background-position: left center;
+        border-radius: 2em;
+        transition: background-position .15s ease-in-out;
+        height: 1em;
+        margin-top: 0.25em;
+        vertical-align: top;
+        background-color: #fff;
+        background-repeat: no-repeat;
+        background-size: contain;
+        border: 1px solid rgba(0, 0, 0, .25);
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        -webkit-print-color-adjust: exact;
+        color-adjust: exact;
+    }
+
+    input[type=checkbox]:checked {
+        background-position: right center;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+        background-color: #0d6efd;
+        border-color: #0d6efd;
+    }
+
+    .botao-edit {
+        background: #2264ac;
+        height: 45px;
+        border: none;
+        border-radius: 100px;
+        padding: 0px 23px;
+        animation: 1s ease 0s 1 normal forwards running lbWRkT;
+        cursor: pointer;
+        transition: all 0.3s ease 0s;
+        box-shadow: rgb(0 0 0 / 10%) 0px 20px 25px -5px, rgb(0 0 0 / 3%) 0px 10px 10px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 0.7rem;
+        font-weight: 500;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: rgb(255, 255, 255);
+        margin-top: 7px;
+        margin-bottom: 20px;
+        place-self: center;
+    }
+
+    .post-form {
+        display: flex;
+        flex-direction: column;
+    }
+</style>
+
+<form class="post-form" id="post_form" method="post" action="" enctype="multipart/form-data">
     <div id="editor" style="margin-top: 80px;"></div>
     <div id="datepicker-wrapper" style="display: flex; justify-content: end; margin-right: 10%;"></div>
 
@@ -470,7 +539,7 @@
         {{ post_form.as_p }} <br />
     </div>
 
-    <button type="button" onclick="onClickSubmit()">Salvar</button>
+    <button class="botao-edit" type="button" onclick="onClickSubmit()">Salvar</button>
     <input type="submit" name="submit" value="Salvar" style="display: none;" id="submit_post_form" />
 </form>
 {% endblock %}
