--- a/FreiRui/templates/post/list_cards.html
+++ b/FreiRui/templates/post/list_cards.html
@@ -4,13 +4,13 @@
 {% if user.is_authenticated %}
 <span style="display: flex; flex-direction: row; justify-content: space-evenly;">
     <a href="{% url 'post_new' %}" class="top-menu"
-        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
-            class="far fa-plus-square fa-5x"></i>
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+        <i class="far fa-plus-square fa-5x"></i>
         <p> criar postagem </p>
     </a>
     <a href="{% url 'category_new' %}" class="top-menu"
-        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;"> <i
-            class="far fa-plus-square fa-5x"></i>
+        style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+        <i class="far fa-plus-square fa-5x"></i>
         <p> Criar Categoria </p>
     </a>
 </span>
@@ -19,9 +19,9 @@
 <section>
 
     <div style="padding-bottom: 30px; padding-top: 30px;" class="d-flex justify-content-center h1-quemsomos">
-        <h1>
+        <h2>
             {{ category.title }}
-        </h1>
+        </h2>
     </div>
 
     <div class="container h5-title">
@@ -31,7 +31,10 @@
             <div class="col" style="width: 300px;">
                 <div class="card mt-5 mb-5 card-size">
                     <div class="card-body d-flex title-homilias flex-column align-items-center">
-                        <h5 class="post-title">
+                        <h5 class="post-title {% if post.is_deleted %} text-danger {% endif %}">
+                            {% if post.published_date > now %}
+                            <i class="far fa-clock text-danger"></i>
+                            {% endif %}
                             {{ post.title }}
                         </h5>
                         <div class="btn-custom">
