--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -4,12 +4,11 @@
 <html lang="pt-br">
 
 <head>
-    <title>Django Girls blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap"
-        integrity="sha384-WXEe6SF/LiwudzPd11Un4jynGE1igNY+6Y8rW2kwxHx7tUFELlXsc+Tm1bnmCg6Q" crossorigin="anonymous">
+        integrity="sha384-UpzG6gQIeAm1hL7c1OkYgvHwuX+7LntepTQwg0Vn+Syymkx0HfV8NuCijfWLXT7P" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,15 +32,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name = "description" content = "Legado do Frei Rui Guido Depiné, obras, textos, eventos e ações do Frei, conteúdo católico e cristão sem fins lucrativos">
     <title>Legado do Frei Rui Guido Depiné</title>
-    <meta property="fb:page_id" content="271595581748248">
+    <!-- meta property="fb:page_id" content="271595581748248" -->
 </head>
 
 <body>
     <header class=" text-white">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img src="{% static 'logo.png' %}" width="170" height="170" alt="contornos do Frei Rui">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -87,8 +87,9 @@
                                     {% endif %}
                                 </li>
                                 <!-- assign next element to a variable -->
-                                {% with next_category=categories|next:forloop.counter0 %}
+                                {% with next_category=category | next:forloop.counter0 %}
                                 <li>
+                                    {% if next_category.pk %}
                                     {% if user.is_authenticated %}
                                     <span
                                         style="display: flex; flex-direction: row; align-items: center; margin-left: 10px;">
@@ -104,6 +105,7 @@
                                 </li>
                                 {% if user.is_authenticated %}
                                 </span>
+                                {% endif %}
                                 {% endif %}
                                 {% endwith %}
                             </ul>
