--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,6 +1,10 @@
 {% extends "admin/index.html" %}
 
 {% block content %}
-<a href="/admin/request/request/overview/" style="margin-bottom: 20px; display: block;">Ver estatísticas de acesso</a>
+<a href="/admin/request/request/overview/" style="margin-bottom: 10px; display: block;">Ver estatísticas de acesso</a>
+<span style="display: flex; margin-bottom: 20px;">
+    <a href="/admin/dump" style="margin-right: 20px">Fazer Backup</a>
+    <a href="/admin/load">Restaurar Backup</a>
+</span>
 {{ block.super }}
 {% endblock %}
