Melhores redirecionamentos + ajustes

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -20,6 +20,8 @@
         --object-tools-hover-bg: #3f8ad9;
         --button-bg: #2264ac;
         --button-hover-bg: #3f8ad9;
+        --default-button-bg: #2264ac;
+        --default-button-hover-bg: #3f8ad9;
     }
 
     #user-tools a:focus, #user-tools a:hover {
