--- a/FreiRui/templates/post/list_single.html
+++ b/FreiRui/templates/post/list_single.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load markdown_deux_tags %}
+{% load markdownify %}
 
 {% block content %}
 
@@ -69,7 +69,7 @@
     </div>
 
     <div class="p-text-center">
-        <p class="post-cruncher">{{ posts.text | markdown:"safe" }}</p>
+        <p class="post-cruncher">{{ posts.text | markdownify }}</p>
     </div>
 </section>
 
