--- a/FreiRui/templates/post/list_accordion.html
+++ b/FreiRui/templates/post/list_accordion.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% if user.is_authenticated %}
+{% if user.is_authenticated%}
+{% if category %}
 <span style="display: flex; flex-direction: row; justify-content: space-evenly;">
     <a href="{% url 'post_new' category=category.name %}" class="top-menu"
         style="margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
@@ -14,6 +15,7 @@
         <p> Criar Categoria </p>
     </a>
 </span>
+{% endif %}
 {% endif %}
 <section>
     <div style="padding-bottom: 30px; padding-top: 30px;" class="d-flex justify-content-center h1-quemsomos">
@@ -36,7 +38,7 @@
         <div class="btn-custom">
             <button class="button-bb"
                 onclick="(() => window.location.href = `{% url 'post_details' category=post.category pk=post.pk %}`.replace('%20', '_'))()">
-                Ler {{ post.category.short_name }}
+                {{ post.category.short_name }}
             </button>
         </div>
     </div>
