--- a/FreiRui/templates/post/list_cards.html
+++ b/FreiRui/templates/post/list_cards.html
@@ -41,7 +41,7 @@
                         </h5>
                         <div class="btn-custom">
                             <button class="button-bb"
-                                onclick="(() => window.location.href = `{% url 'post_details' category=post.category pk=post.pk %}`)()">
+                                onclick="(() => window.location.href = window.encodeURI(`{% url 'post_details' category=post.category pk=post.pk %}`))()">
                                 {{ post.category.short_name }}
                             </button>
                         </div>
