--- a/FreiRui/templates/post/list_cards.html
+++ b/FreiRui/templates/post/list_cards.html
@@ -37,7 +37,11 @@
                             {% if post.published_date > now %}
                             <i class="far fa-clock text-danger"></i>
                             {% endif %}
-                            {{ post.title }}
+                            {% if posts.title %}
+                            <h1>
+                                {{ posts.title }}
+                            </h1>
+                            {% endif %}
                         </h5>
                         <div class="btn-custom">
                             <button class="button-bb"
