--- a/FreiRui/templates/base.html
+++ b/FreiRui/templates/base.html
@@ -4,18 +4,27 @@
 <html lang="pt-br">
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <noscript>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    </noscript>
     <!-- Google keeps breaking SRI hashes, so I removed it -->
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap">
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
         integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS?display=swap"
-        crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-    
+        crossorigin="anonymous" media="print" onload="this.media='all'">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /-->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" />
+    <link rel="preload" href="{% static 'style.css' %}" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript>
+        <link rel="stylesheet" href="{% static 'style.css' %}">
+    </noscript>
+
+
     <!-- whatsapp-->
     {% if previewImgLink %}
     <meta property="og:image" content="{{ previewImgLink }}">
@@ -51,7 +60,7 @@
             const prettifiedUrl = category.replace(/\s|%20/g, '_');
             window.location.href = window.encodeURI(prettifiedUrl);
         }
-        
+
         const getCookieLang = () => (/.*lang=([^;]*).*/i.exec(document.cookie) ?? [''])[1] || 'pt';
         window.getCookieLang = getCookieLang;
 
@@ -208,9 +217,9 @@
     <!-- Linguas -->
     <div style="display: flex; position: absolute; top: 215px; left: 15px; width: 75px;">
         <select class="form-select" aria-label="Language/ Língua" id="lang-select" onchange="changeValue()">
-            <option value="pt">🇧🇷</option>
-            <option value="en" disabled>🇺🇸</option>
-            <option value="de" disabled>🇩🇪</option>
+            <option value="pt"> 🇧🇷 </option>
+            <option value="en" disabled> 🇺🇸 </option>
+            <option value="de" disabled> 🇩🇪 </option>
         </select>
     </div>
     <div class="content container" style="height: auto; min-height: 100%;">
@@ -241,8 +250,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"
+        async defer></script>
 </body>
 
 </html>
