--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -38,7 +38,7 @@
     }
 </style>
 <a href="/">
-    <img src="{% static 'logo.png' %}" width="170" height="170" alt="contornos do Frei Rui">
+    <img src="{% static 'logo.webp' %}" width="170" height="170" alt="contornos do Frei Rui">
 </a>
 {{ block.super }}
 {% endblock %}
